--- a/src/components/headerComponents/Logo.css
+++ b/src/components/headerComponents/Logo.css
@@ -7,16 +7,14 @@
 .logoImage {
     width: 100%;
     height: 100%;
-
+    cursor: pointer;
     object-fit: contain;
 }
 
 /** Responsive ************************************************************************************ */
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (max-width: 1200px) {
-
-}
+@media only screen and (max-width: 1200px) {}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 992px) {
