--- a/src/components/homepageComponents/ProductCard.css
+++ b/src/components/homepageComponents/ProductCard.css
@@ -1,3 +1,4 @@
+
 .homepage-productCard-price {
 	color: rgb(255, 48, 48);
 	font-size: var(--fs-500);
@@ -31,7 +32,6 @@
 	max-height: 180px;
 	overflow: hidden;
 	position: relative;
-
 	/* background: red; */
 	.productCard-button-container {
 		/* display: none; */
@@ -42,7 +42,6 @@
 		bottom: 20px;
 		align-content: center;
 	}
-
 	.productCard-button1 {
 		width: 30px;
 		padding: 3px;
@@ -58,6 +57,7 @@
 	box-shadow: 10px 10px 3px #dddddd;
 	border-radius: 20px;
 	background: rgb(248, 248, 248);
+	box-shadow: 0px 0px 8px var(--secondary-background-clr);
 
 	.productCard-button-container {
 		transition: all 1s;
@@ -76,9 +76,9 @@
 }
 
 .homepage-productCard-img {
-	max-width: 140px;
+	max-width: 130px;
 	max-height: 150px;
-	min-width: 50px;
+	min-width: 130px;
 	min-height: 150px;
 	object-fit: contain;
 }
@@ -102,7 +102,7 @@
 	margin: 2px auto;
 	display: flex;
 	align-items: center;
-	.thumbnail{
+	.thumbnail {
 		height: fit-content;
 		/* background: red; */
 		width: 25%;
@@ -111,30 +111,30 @@
 		max-height: 100px;
 		object-fit: contain;
 	}
-	button.thumbnail{
+	button.thumbnail {
 		background: white;
 		/* padding: 1px; */
 		border-radius: 10px;
-		box-shadow: 0 0 5px 3px var( --secondary-background-clr);
+		box-shadow: 0 0 10px var(--secondary-background-clr);
 	}
-	button.thumbnail:not(.active){
+	button.thumbnail:not(.active) {
 		opacity: 0.8;
 		box-shadow: none;
 		filter: grayscale(50%);
 	}
-	button.thumbnail:hover{
-		box-shadow: 0 0 5px 3px var( --secondary-background-clr);
+	button.thumbnail:hover {
+		box-shadow: 0 0 10px var(--secondary-background-clr);
 	}
 }
-.modal-priceTag{
-	background:  var( --secondary-background-clr);
+.modal-priceTag {
+	background: var(--secondary-background-clr);
 	transform: skew(15deg);
 	/* width: 100%; */
 	width: fit-content;
-	.modal-priceTag-text{
-			transform: skew(-25deg);
-			text-transform: uppercase;
-			color: var(--secondary-text-color);
-			letter-spacing: 1px;
+	.modal-priceTag-text {
+		transform: skew(-25deg);
+		text-transform: uppercase;
+		color: var(--secondary-text-color);
+		letter-spacing: 1px;
 	}
 }
