--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root {
   /* colors */
-  --main-color:  #57A399;
+  --main-color:  #3085C3;
   /* --main-color:  #2f8872; */
 
   --primary-background-clr: white;
