--- a/src/pages/extra_pages/AllProductsPage.css
+++ b/src/pages/extra_pages/AllProductsPage.css
@@ -4,7 +4,8 @@
 
     position: relative;
 
-    background-color: rgb(241, 252, 246);
+    /* background-color: rgb(241, 252, 246); */
+    background-color: #EEF7FF;
     border: 1px solid rgb(191, 251, 234);
 
 }
@@ -34,7 +35,8 @@
 }
 
 .allProduct-header-title{
-    font-size: var(--fs-500);
+    font-size: var(--fs-700);
+    
 }
 
 .allProduct-product{
