--- a/src/pages/extra_pages/NewsContent.css
+++ b/src/pages/extra_pages/NewsContent.css
@@ -1,6 +1,7 @@
 .NewsContent-container {
     width: 1200px;
-    background-color: rgb(249, 251, 250);
+    /* background-color: rgb(249, 251, 250); */
+    background-color: #EEF7FF;
     border: 1px solid rgb(191, 251, 234);
 
     font-family: var(--ff-news-font);
