--- a/src/pages/main_pages/NoteBook.css
+++ b/src/pages/main_pages/NoteBook.css
@@ -89,3 +89,26 @@
     box-shadow: none;
 }
 
+/** Responsive ************************************************************************************ */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
+    .allProducts-container {
+        width: 992px;
+    }
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+    .allProducts-container {
+        width: 750px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+    .allProducts-container {
+        width: 100%;
+    }
+}
