--- a/src/components/checkoutComponents/CheckoutInfo.css
+++ b/src/components/checkoutComponents/CheckoutInfo.css
@@ -1,16 +1,17 @@
 .checkout-info {
     height: 100vh;
-
+    padding: 20px;
     background-color: hsl(var(--main-color-code) / 0.05);
     border: 1px solid hsl(var(--main-color-code) / 0.5);
 }
 
-.checkout-info>.logoContainer {
-    width: 100%;
-    height: 100px;
-    padding: 0;
+.checkout-info-container{
+    background-color: hsl(var(--main-color-code) / 0.05);
+    border: 1px solid hsl(var(--main-color-code) / 0.5);
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 15px;
 }
-
 .checkout-info-input{
     border: 1px solid gray;
     width: 100%;
