--- a/src/pages/extra_pages/CheckOut.css
+++ b/src/pages/extra_pages/CheckOut.css
@@ -3,4 +3,31 @@
     height: fit-content;
 
     display: flex;
+    justify-content: space-around;
+
+    background-color: hsl(var(--main-color-code) / 0.05);
+    border: 1px solid hsl(var(--main-color-code) / 0.5);
+}
+
+/** Responsive ************************************************************************************ */
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
+    .checkout-container{
+        width: 100%;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+    .checkout-container{
+       flex-direction: column;
+       align-items: center;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+   
 }
