--- a/src/components/checkoutComponents/PaymentMethod.css
+++ b/src/components/checkoutComponents/PaymentMethod.css
@@ -1,11 +1,17 @@
 .checkout-payment {
-    min-height: 100vh;
+    width: 33.3333%;
     height: fit-content;
     padding: 20px;
 
-    background-color: hsl(var(--main-color-code) / 0.05);
-    border: 1px solid hsl(var(--main-color-code) / 0.5);
 }
+.checkout-delivery>h2,
+.checkout-paymentMethod>h2{
+    font-size: var(--fs-700);
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+
 .checkout-delivery,
 .checkout-paymentMethod{
     background-color: hsl(var(--main-color-code) / 0.05);
@@ -13,6 +19,13 @@
     border-radius: 5px;
     margin-bottom: 10px;
     padding: 15px;
+}
+
+.checkout-payment-option,
+.checkout-delivery-option{
+    display: flex;
+    align-items: baseline;
+    gap: 10px;
 }
 
 .checkout-paymentImage{
@@ -57,3 +70,29 @@
 }
 
 
+/** Responsive ************************************************************************************ */
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
+    .checkout-payment {
+        padding: 5px;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+
+    .checkout-payment {
+        width: 100%;
+        min-height: fit-content;
+        order: 3;
+
+        padding: 30px 30px 0 30px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+   
+}
