--- a/src/pages/main_pages/NewsPage.css
+++ b/src/pages/main_pages/NewsPage.css
@@ -1,3 +1,11 @@
+.newspage-container {
+    width: 100vw;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .newsPageContainer {
     width: 1200px;
     height: fit-content;
@@ -11,6 +19,11 @@
     border: 1px solid hsl(var(--main-color-code) / 0.5);
 }
 
+.newspage-imageBanner {
+    width: 100%;
+    height: 475px;
+    object-fit: fill;
+}
 
 /** Responsive ************************************************************************************ */
 
@@ -30,6 +43,4 @@
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (max-width: 768px) {
-
-}
+@media only screen and (max-width: 768px) {}
