--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --primary-text-color: hsl(0, 0%, 0%);
   --secondary-text-color: hsl(0, 0%, 100%);
   --hover-text-color: hsl(0, 0%, 36%);
+  --hover-button-color: hsl(62, 50%, 35%);
   --active-text-color: var(--main-color);
 
   ;
