--- a/src/pages/main_pages/ContactPage.css
+++ b/src/pages/main_pages/ContactPage.css
@@ -156,3 +156,25 @@
         margin: auto;
      }
 }
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px){
+    .contactPageContainer {
+        width: 100%;
+    }
+    .contactPageContainer_row1 {
+        display: flex;
+        flex-direction: column;
+    }
+    .contact_info{
+        width: 100%;
+    }
+    .contact_comment{
+        width: 100%;
+    }
+    .contactPageContainer_row2 {
+        display: block;
+        width: 90%;
+        height: 450px;
+        margin: auto;
+    }
+}
