--- a/src/pages/main_pages/NewsPage.css
+++ b/src/pages/main_pages/NewsPage.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 80px;
-
+    margin: auto;
     background-color: hsl(var(--main-color-code) / 0.05);
     border: 1px solid hsl(var(--main-color-code) / 0.5);
 }
