--- a/src/pages/extra_pages/CartPage.css
+++ b/src/pages/extra_pages/CartPage.css
@@ -1,6 +1,6 @@
 .cartPage-container {
     width: 1200px;
-
+    margin: auto;
     padding: 30px 50px;
     background-color: hsl(var(--main-color-code) / 0.05);
     border: 1px solid hsl(var(--main-color-code) / 0.5);
@@ -53,7 +53,7 @@
 }
 
 /* Tablt td */
-.cartPage-td-delete {}
+/* .cartPage-td-delete {} */
 
 .cartPage-td-product {
     height: 100px;
@@ -64,11 +64,11 @@
     gap: 20px;
 }
 
-.cartPage-td-price,
+/* .cartPage-td-price,
 .cartPage-td-quantity,
 .cartPage-td-subtotal{
 
-}
+} */
 
 /* *************************************************** */
 
