--- a/src/pages/extra_pages/CartPage.css
+++ b/src/pages/extra_pages/CartPage.css
@@ -5,7 +5,8 @@
     background-color: hsl(var(--main-color-code) / 0.05);
     border: 1px solid hsl(var(--main-color-code) / 0.5);
 }
-.cartPage-name{
+
+.cartPage-name {
     color: var(--active-text-color);
     font-weight: bold;
 }
@@ -66,14 +67,11 @@
     align-items: center;
     justify-content: start;
     gap: 20px;
-    border: 1px solid red;
 }
 
 .cartPage-td-price,
 .cartPage-td-quantity,
-.cartPage-td-subtotal{
-
-}
+.cartPage-td-subtotal {}
 
 /* *************************************************** */
 
@@ -108,7 +106,6 @@
     color: rgb(85, 85, 85);
     margin: 0;
 
-    border: 1px solid red;
 }
 
 .cartPage-item-price {
@@ -130,18 +127,20 @@
 
     position: relative;
 }
-.cartPage-item-qty:focus{
+
+.cartPage-item-qty:focus {
     outline: none;
 }
 
-.cartPage-item-qty::-webkit-outer-spin-button, 
+.cartPage-item-qty::-webkit-outer-spin-button,
 .cartPage-item-qty::-webkit-inner-spin-button {
     -webkit-appearance: none;
     background: #FFF url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAKUlEQVQYlWNgwAT/sYhhKPiPT+F/LJgEsHv37v+EMGkmkuImoh2NoQAANlcun/q4OoYAAAAASUVORK5CYII=) no-repeat center center;
     width: 25px;
     height: 40px;
     border-left: 1px solid #BBB;
-    opacity: 0.8; /* shows Spin Buttons per default (Chrome >= 39) */
+    opacity: 0.8;
+    /* shows Spin Buttons per default (Chrome >= 39) */
 
     position: absolute;
     top: 0;
@@ -150,7 +149,7 @@
 
 }
 
-.cartPage-item-subtotal{
+.cartPage-item-subtotal {
     padding: 10px 0;
     margin: 0;
     font-size: var(--fs-400);
@@ -166,7 +165,7 @@
 
     display: flex;
     justify-content: flex-end;
-    gap: 50px;
+    gap: 100px;
     align-items: flex-end;
 
     border-top: 2px solid rgb(211, 211, 211);
@@ -174,17 +173,15 @@
     position: relative;
 }
 
-.cartPage-bottom-sumText{
-    position: absolute;
-    left: 70%;
+.cartPage-bottom-sumText {
 }
-.cartPage-bottom-sumPrice {
-    align-content: center;
-    position: relative;
-    right: 70px;
-   color: var(--active-text-color);
 
+.cartPage-bottom-sumPrice {
+
+    align-content: center;
+    color: var(--active-text-color);
 }
+
 .cartPage-bottom-button {
     padding: 0 30px;
     gap: 20px;
@@ -193,7 +190,7 @@
 
 }
 
-.cartPage-bottom-checkout{
+.cartPage-bottom-checkout {
     width: 200px;
     height: 45px;
 
@@ -205,11 +202,11 @@
     text-decoration: none;
     background-color: var(--secondary-background-clr);
 
-    color:  var(--secondary-text-color);
+    color: var(--secondary-text-color);
 
 }
 
-.cartPage-bottom-back{
+.cartPage-bottom-back {
     width: 200px;
     height: 45px;
 
@@ -221,25 +218,25 @@
     text-decoration: none;
 
     background-color: rgb(199, 199, 199);
-    color:  var(--primary-text-color);
+    color: var(--primary-text-color);
 }
 
 .cartPage-bottom-back:hover,
-.cartPage-bottom-back:active{
+.cartPage-bottom-back:active {
     text-decoration: none;
     background-color: rgb(149, 149, 149);
-    color:  var(--secondary-text-color);
+    color: var(--secondary-text-color);
 }
 
 .cartPage-bottom-checkout:hover,
-.cartPage-bottom-checkout:active{
+.cartPage-bottom-checkout:active {
     text-decoration: none;
-    color:  var(--secondary-text-color);
+    color: var(--secondary-text-color);
     background: var(--secondary-background-clr);
     opacity: 0.8;
 }
 
-.cartPage-noitem{
+.cartPage-noitem {
     padding: 30px;
     font-size: var(--fs-500);
 }
@@ -251,22 +248,46 @@
 @media only screen and (max-width: 1200px) {
     .cartPage-container {
         width: 100%;
-        border: 1px solid red;
     }
-   
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (max-width: 992px) {
-    
-}
+@media only screen and (max-width: 992px) {}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
-    .cartPage-subtotal {
-       display: none;
+    .cartPage-container {
+        padding: 15px;
     }
-    .cartPage-td-subtotal{
+
+    .cartPage-subtotal,
+    .cartPage-price {
         display: none;
+    }
+
+    .cartPage-td-subtotal,
+    .cartPage-td-price {
+        display: none;
+    }
+
+    .cartPage-delete {
+        width: 5%;
+    }
+
+    .cartPage-product {
+        width: 70%;
+
+    }
+
+    .cartPage-quantity {
+        width: 25%;
+    }
+
+    .cartPage-item-qty {
+        width: 60%;
+    }
+
+    .cartPage-bottom-sum {
+        justify-content: space-between;
     }
 }
