--- a/src/components/homepageComponents/ProductCard.css
+++ b/src/components/homepageComponents/ProductCard.css
@@ -116,15 +116,24 @@
 .carousel-indicators.carda {
 	width: 100%;
 	height: 150px;
+	padding: 5px;
 	position: static;
+	border: 2px solid gray;
+	border-left: none;
+	border-right: none;
 	margin: 2px auto;
 	display: flex;
+	/* border: 8px solid red; */
 	align-items: center;
 	.thumbnail {
 		height: fit-content;
 		/* background: red; */
 		width: 25%;
 	}
+	/* .carousel-control-next-icon,
+	.carousel-control-prev-icon {
+		filter: invert(30%);
+	} */
 	.thumbImg {
 		max-height: 100px;
 		object-fit: contain;
