--- a/src/pages/main_pages/ContactPage.css
+++ b/src/pages/main_pages/ContactPage.css
@@ -141,7 +141,7 @@
     }
     .contactPageContainer_row1 {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     .contact_info{
         width: 100%;
@@ -163,7 +163,7 @@
     }
     .contactPageContainer_row1 {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     .contact_info{
         width: 100%;
