--- a/src/pages/extra_pages/NewsContent.css
+++ b/src/pages/extra_pages/NewsContent.css
@@ -63,3 +63,23 @@
     flex-direction: column;
     gap: 50px;
 }
+
+/** Responsive ************************************************************************************ */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
+    .NewsContent-container {
+        width: 100%;
+    }
+    .NewsContent-sidebar{
+        /* display: none; */
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {}
