--- a/src/components/newspageComponents/InterestedNews2.css
+++ b/src/components/newspageComponents/InterestedNews2.css
@@ -80,3 +80,23 @@
     font-size: var(--fs-400);
 
 }
+
+/** Responsive ************************************************************************************ */
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
+    .interestedNews2-newsReadLot{
+        display: none;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+
+}
