--- a/src/components/footerComponents/ServicesBanner.css
+++ b/src/components/footerComponents/ServicesBanner.css
@@ -1,44 +1,46 @@
 .servicesBanner-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 60px;
-  
-
+	width: 100%;
+	height: 100%;
+	display: flex;
+	/* flex-wrap: wrap; */
+	justify-content: space-evenly;
+	/* gap: 60px; */
 }
 
 .servicesBanner-delivery,
 .servicesBanner-support,
 .servicesBanner-exchange_return,
 .servicesBanner-standardPrice {
-    width: 240px;
-    height: 100%;
-    display: flex;
-    align-items: center;
+	/* width: 240px; */
+	height: 100%;
+	display: flex;
+	align-items: center;
+	width: 200px;
 }
 
-.servicesImage{
-    width: 60px;
-    height: 60px;
+.servicesImage {
+	width: 60px;
+	height: 60px;
 
-    transition: 0.3s;
-    transform: rotateY(0deg);
+	transition: 1s;
+	/* transform: rotateY(0deg); */
 }
 
-.delivery:hover>.servicesImage,
-.support:hover>.servicesImage,
-.exchange_return:hover>.servicesImage,
-.standardPrice:hover>.servicesImage{
-    transform: rotateY(360deg)
+.servicesBanner-delivery:hover,
+.servicesBanner-support:hover,
+.servicesBanner-exchange_return:hover,
+.servicesBanner-standardPrice:hover {
+	cursor: pointer;
+	.servicesImage {
+		transform: rotateY(360deg);
+	}
 }
 
 .servicesName {
-    width: 180px;
+	/* width: 180px;
     height: 60px;
-    padding-left: 20px;
-    align-content: center;
-    color: var(--secondary-text-color);
+    padding-left: 20px; */
+	/* align-content: center; */
+	margin-bottom: 0;
+	color: var(--secondary-text-color);
 }
-
