--- a/src/components/newspageComponents/RelatedNews.css
+++ b/src/components/newspageComponents/RelatedNews.css
@@ -24,8 +24,6 @@
     width: 100px;
     height: 80px;
 
-
-
     cursor: pointer;
 
     object-fit: fill;
@@ -50,8 +48,44 @@
 
     text-align: left;
 }
-
+.relatedNews-decription{
+    display: none;
+}
 .relatedNews-desc {
     margin: 0;
     font-size: var(--fs-300);
+}
+
+
+/** Responsive ************************************************************************************ */
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
+ 
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+    .relatedNews-img{
+        width: 200px;
+        height: 150px;
+    }
+    .relatedNews-content {
+        height: 150px;
+    }
+    .relatedNews-title {
+        font-size: var(--fs-500);
+    }
+    .relatedNews-newscard {
+        gap: 20px;
+    }
+    .relatedNews-decription{
+        display: block;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+
 }
