--- a/src/pages/extra_pages/AllProductsPage.css
+++ b/src/pages/extra_pages/AllProductsPage.css
@@ -25,6 +25,7 @@
     flex-direction: column;
     padding: auto;
     margin: auto;
+ 
 }
 
 .allProduct-header{
@@ -46,11 +47,14 @@
 .allProduct-product{
     width: 100%;
     height: fit-content;
-    padding: 20px;
-
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    /* gap: 20px; */
+    background-color: rebeccapurple;
+    justify-content: space-evenly;
+
 }
 /* * Responsive ************************************************************************************
 
