--- a/src/components/filterComponents/TypeFilterAll.css
+++ b/src/components/filterComponents/TypeFilterAll.css
@@ -126,26 +126,26 @@ input[type="checkbox"] {
 /* * Responsive ************************************************************************************
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (max-width: 1200px) {
+/* @media only screen and (max-width: 1200px) {
     
-}
+} */
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (max-width: 992px) {
+/* @media only screen and (max-width: 992px) {
    
-}
+} */
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 768px) {
     .typeFilterAll-item-container  {
         display: none;
     }
-}
+} */
 .typeFilterbtn{ 
     background: var(--secondary-background-clr);
     color: white;
     font-size: 20px;
-    line-height: 50px;
+    line-height: 40px;
     border-radius: 10px;
 }
 .typeFilterSubmenu{
