--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,11 @@
     z-index: -2;
 
 }
+.motionDivContainer{
+    width: 100%;
+}
+.imageBanner {
+    width: 100%;
+    height: 475px;
+    object-fit: cover;
+}
