--- a/src/pages/main_pages/HomePage.css
+++ b/src/pages/main_pages/HomePage.css
@@ -1,3 +1,4 @@
+
 .homepage-section-carousel {
 	position: relative;
 	z-index: 0;
@@ -11,6 +12,8 @@
 .homepage-section-notebook-container {
 	min-height: 540px;
 	/* max-height: 540px; */
+	background-color: hsl(var(--main-color-code) / 0.05);
+    border: 1px solid hsl(var(--main-color-code) / 0.5);
 }
 
 .homepage-section-notebook {
