--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -60,6 +60,10 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 992px) {
     .headerContainer {
+        background-color: rgba(255, 255, 255, 1);
+    }
+
+    .headerContainer {
         width: 750px;
         height: 116px;
         padding: 0;
@@ -80,6 +84,7 @@
         bottom: 0;
         right: 0;
     }
+
     .headerContainer_row2 {
         display: none;
     }
