--- a/src/components/filterComponents/PriceFilter.css
+++ b/src/components/filterComponents/PriceFilter.css
@@ -39,11 +39,15 @@
     border: 1px solid var(--secondary-background-clr);
     border-radius: 10px; 
 }
-.priceFilter-pricerange{
+.priceFilter-pricerange,
+.priceFilter-pricerangeDropDown{
     display: flex;
     align-items: center;
-
     gap: 10px;
+
+    label{
+        cursor: pointer;
+    }
 }
 .priceFilter-checkbox{
     padding-left: 10px;
@@ -62,6 +66,8 @@
     padding-bottom:0 ;
 }
 .priceFilter-pricerangeDropDown{
+    padding: 5px 10px;
+}
+.priceFilterDropDownitem{
     padding-left: 10px;
-
 }
