--- a/src/pages/main_pages/AboutPage.css
+++ b/src/pages/main_pages/AboutPage.css
@@ -10,6 +10,7 @@
 	border: 1px solid hsl(var(--main-color-code) / 0.5);
 	flex-direction: column;
 	position: relative;
+	cursor: default;
 }
 
 .aboutPage-company {
@@ -19,13 +20,13 @@
 	/* margin-bottom: 80px; */
 	justify-content: space-evenly;
 	box-shadow: rgba(58, 123, 44, 0.2) 0px 7px 29px 0px;
-	
+	border-radius: 15px;
 }
 
-.aboutPage-company:hover {
+/* .aboutPage-company:hover {
 	box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
 	transform: translateY(-0.25em);
-}
+} */
 
 .aboutPage-company-title {
 	width: 100%;
@@ -51,14 +52,13 @@
 .aboutPage-company-image {
 	width: 100%;
 	object-fit: contain;
-	border-radius: 5px;
+	border-radius: 15px;
 }
 
 .aboutPage-company-content {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-
 }
 
 .aboutPage-company-contentTitle {
@@ -75,7 +75,6 @@
 }
 
 .aboutPage-team {
-	
 	.aboutPage-team-title {
 		font-size: 4rem;
 		text-align: center;
@@ -83,6 +82,7 @@
 		color: var(--active-text-color);
 		text-shadow: 5px 5px 10px;
 		border-bottom: 3px solid var(--active-text-color);
+		cursor: default;
 	}
 }
 
@@ -92,9 +92,8 @@
 	grid-gap: 40px;
 	margin: 20px;
 	margin-top: 60px;
-	
 }
-.aboutPage-company-colCard{
+.aboutPage-company-colCard {
 	border: 1px solid #eee;
 	border-radius: 15px;
 	padding: 20px;
@@ -105,7 +104,7 @@
 	background-color: var(--main-color-code);
 	/* width: 80vh; */
 }
-.aboutPage-company-imgPlaceholder{
+.aboutPage-company-imgPlaceholder {
 	width: 55%;
 	display: flex;
 	max-height: 200px;
@@ -113,88 +112,86 @@
 	border-radius: 15px;
 	box-shadow: 1px 1px 16px -6px rgba(0, 0, 0, 0.75);
 }
-.aboutPage-company-cardImg{
+.aboutPage-company-cardImg {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
-.aboutPage-company-cardContent{
+.aboutPage-company-cardContent {
 	margin: auto;
 	margin-top: 20px;
 	text-align: center;
 }
-.aboutPage-company-cardIcon{
+.aboutPage-company-cardIcon {
 	width: 20px;
 }
-.aboutPage-company-cardTitle{
+.aboutPage-company-cardTitle {
 	font-size: var(--fs-800);
 	font-weight: 600;
 	font-family: 'Roboto Slab', serif;
 	margin: auto;
 	margin-bottom: 10px;
 }
-.aboutPage-company-cardPara{
+.aboutPage-company-cardPara {
 	margin: 10px 0px 10px 15px;
 	font-family: 'Roboto Slab', serif;
 	font-size: var(--fs-600);
 }
-.aboutPage-company-row{
+.aboutPage-company-row {
 	display: flex;
 	justify-content: center;
-	gap:5px;
+	gap: 5px;
 	margin-top: 40px;
 }
-.aboutUs-logo{
+.aboutUs-logo {
 	width: 25px;
-    height: 25px;
-    object-fit: contain;
+	height: 25px;
+	object-fit: contain;
 }
 
 /** Responsive ************************************************************************************ */
 
-
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (max-width: 1200px) {
-    .aboutPage-container {
-        width: 100%;
-    }
-	.aboutPage-company{
+	.aboutPage-container {
+		width: 100%;
+	}
+	.aboutPage-company {
 		flex-direction: column;
 	}
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 992px) {
-    .aboutPage-container {
-        width: 100%;
-    }
-	.aboutPage-company{
+	.aboutPage-container {
+		width: 100%;
+	}
+	.aboutPage-company {
 		flex-direction: column;
 	}
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
-    .aboutPage-container {
-        width: 100%;
-    }
-	.aboutPage-company{
+	.aboutPage-container {
+		width: 100%;
+	}
+	.aboutPage-company {
 		flex-direction: column;
 	}
-   .aboutPage-company-containerCard{
-	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-   }
+	.aboutPage-company-containerCard {
+		grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	}
 }
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px){
-    .aboutPage-container {
-        width: 100%;
-    }
-	.aboutPage-company{
+@media only screen and (max-width: 600px) {
+	.aboutPage-container {
+		width: 100%;
+	}
+	.aboutPage-company {
 		flex-direction: column;
 	}
-   .aboutPage-company-containerCard{
-	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-   }
-    
+	.aboutPage-company-containerCard {
+		grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	}
 }
